--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
   <div class="navbar sticky-top navbar-expand-md p-2 text-center bg-light">
       <nav class="container-fluid flex-wrap flex-md-nowrap" aria-label="Navigation">
           <div class="navbar-brand">
-            <img src="/ref/logo.png" alt="logo" class="img-fluid m-10">
+            <img src="./ref/logo.png" alt="logo" class="img-fluid m-10">
           </div>
         
         <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#vnavbar" aria-controls="vnavbar" aria-expanded="false" aria-label="Toggle navigation">
@@ -135,10 +135,10 @@
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active ">
-        <img src="/ref/main_image.png" class="d-block w-100" alt="...">
+        <img src="./ref/main_image.png" class="d-block w-100" alt="...">
       </div>
       <div class="carousel-item">
-        <img src="/ref/main_image.png" class="d-block w-100" alt="...">
+        <img src="./ref/main_image.png" class="d-block w-100" alt="...">
       </div>
       <div class="w-100 h-100 dark-overlay position-absolute"></div>
       <div class="carousel-caption">
@@ -167,7 +167,7 @@
             <span class="fs-3 fw-light">FIND YOUR</span>
             <h1 class="fw-bolder text-light">HOLYDAYS</h1>
           </div>
-          <img class="mx-3 align-self-stretch" src="/ref/seperator.png" alt="seperator">
+          <img class="mx-3 align-self-stretch" src="./ref/seperator.png" alt="seperator">
         </div>
       </div>
       <div class="col-12 col-md-auto">
@@ -203,7 +203,7 @@
     <div class="row justify-content-start  flex-nowrap overflow-scroll my-5 py-3">
       <div class="col-12 col-sm-6 col-md-4 col-lg-2">
         <div class="card thic">
-          <img src="/ref/destination_1.png" class="card-img-top" alt="...">
+          <img src="./ref/destination_1.png" class="card-img-top" alt="...">
           <div class="card-body p-0">
             <div class="accordion accordion-flush" id="MoreInfoAccordion">
               <div class="accordion-item">
@@ -225,7 +225,7 @@
       </div>
       <div class="col-12 col-sm-6 col-md-4 col-lg-2">
         <div class="card thic">
-          <img src="/ref/destination_2.png" class="card-img-top" alt="...">
+          <img src="./ref/destination_2.png" class="card-img-top" alt="...">
           <div class="card-body p-0">
             <div class="accordion accordion-flush" id="MoreInfoAccordion">
               <div class="accordion-item">
@@ -247,7 +247,7 @@
         </div>
         <div class="col-12 col-sm-6 col-md-4 col-lg-2">
           <div class="card thic">
-            <img src="/ref/destination_3.png" class="card-img-top" alt="...">
+            <img src="./ref/destination_3.png" class="card-img-top" alt="...">
             <div class="card-body p-0">
               <div class="accordion accordion-flush" id="MoreInfoAccordion">
                 <div class="accordion-item">
@@ -269,7 +269,7 @@
         </div>
         <div class="col-12 col-sm-6 col-md-4 col-lg-2">
           <div class="card thic">
-            <img src="/ref/destination_4.png" class="card-img-top" alt="...">
+            <img src="./ref/destination_4.png" class="card-img-top" alt="...">
             <div class="card-body p-0">
               <div class="accordion accordion-flush" id="MoreInfoAccordion">
                 <div class="accordion-item">
@@ -291,7 +291,7 @@
         </div>
         <div class="col-12 col-sm-6 col-md-4 col-lg-2">
           <div class="card thic">
-            <img src="/ref/destination_5.png" class="card-img-top" alt="...">
+            <img src="./ref/destination_5.png" class="card-img-top" alt="...">
             <div class="card-body p-0">
               <div class="accordion accordion-flush" id="MoreInfoAccordion">
                 <div class="accordion-item">
@@ -313,7 +313,7 @@
         </div>
         <div class="col-12 col-sm-6 col-md-4 col-lg-2">
           <div class="card thic">
-            <img src="/ref/destination_6.png" class="card-img-top" alt="...">
+            <img src="./ref/destination_6.png" class="card-img-top" alt="...">
             <div class="card-body p-0">
               <div class="accordion accordion-flush" id="MoreInfoAccordion">
                 <div class="accordion-item">
@@ -335,7 +335,7 @@
         </div>
         <div class="col-12 col-sm-6 col-md-4 col-lg-2">
           <div class="card thic">
-            <img src="/ref/destination_2.png" class="card-img-top" alt="...">
+            <img src="./ref/destination_2.png" class="card-img-top" alt="...">
             <div class="card-body p-0">
               <div class="accordion accordion-flush" id="MoreInfoAccordion">
                 <div class="accordion-item">
